--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- This is a comment! -->
- 
+ <title>Cat Perry's Favorite Cats</title>
   <head>
    
   </head>
